--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.6.0</title>
+    <title>FIKO 0.6.1</title>
 
     <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
     <!-- <style>
@@ -285,6 +285,28 @@
 
         <section>
           <hgroup>
+            <h2>Dialog / Modal</h2>
+          </hgroup>
+          <p>This is dialog</p>
+          <dialog open>
+            <div>This is an HTML dialog!</div>
+          </dialog>
+        </section>
+
+        <hr />
+
+        <section>
+          <hgroup>
+            <h2>Modal</h2>
+          </hgroup>
+          <p>This is modal</p>
+          <modal>Hey, this is an HTML modal!</modal>
+        </section>
+
+        <hr />
+
+        <section>
+          <hgroup>
             <h2>Blockquote</h2>
           </hgroup>
 
@@ -304,9 +326,6 @@
               <cite>— worldwildlife.org</cite>
             </footer>
           </blockquote>
-
-          <p>This is dialog</p>
-          <dialog>Hey, this is an HTML dialog!</dialog>
         </section>
 
         <hr />
