no dialog yet | v0.6.2

--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.6.1</title>
+    <title>FIKO 0.6.2</title>
 
     <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
     <!-- <style>
@@ -288,8 +288,11 @@
             <h2>Dialog / Modal</h2>
           </hgroup>
           <p>This is dialog</p>
-          <dialog open>
-            <div>This is an HTML dialog!</div>
+          <dialog>
+            <article>
+              <div>This is an HTML dialog!</div>
+              <button class="close">close</button>
+            </article>
           </dialog>
         </section>
 
@@ -443,74 +446,60 @@
     <!-- Footer -->
     <footer class="invert">
       <article>
-        <small></small>
-        <nav>
-          <div>FIKO.CSS &copy;2023 TOYBREAKER</div>
-          <div>
-            <button
-              class="theme-switch"
-              type="button"
-              aria-pressed="false"
-              aria-label="Use Dark Mode"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                aria-hidden="true"
-                focusable="false"
-              >
-                <path d="M21 13A9 9 0 1 1 11 3a7 7 0 0 0 10 10z" />
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                aria-hidden="true"
-                focusable="false"
-              >
-                <circle cx="12" cy="12" r="5" />
-                <path
-                  d="M12 1v2m0 18v2M4 4l2 2m12 12 2 2M1 12h2m18 0h2M4 20l2-2M18 6l2-2"
-                />
-              </svg>
-            </button>
-          </div>
+        <div>FIKO.CSS &copy;2023 TOYBREAKER</div>
 
-          <div>
-            <ul>
-              <li>
-                <small>
-                  <a target="_blank" href="https://github.com/toybreaker/fiko">
-                    Github
-                  </a>
-                </small>
-              </li>
-              <li>
-                <small>
-                  <a target="_blank" href="https://www.npmjs.com/package/fiko">
-                    Npm
-                  </a>
-                </small>
-              </li>
-              <li>
-                <small id="pixelratio"></small>
-              </li>
-            </ul>
-          </div>
-        </nav>
+        <button
+          class="theme-switch"
+          type="button"
+          aria-pressed="false"
+          aria-label="Use Dark Mode"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            aria-hidden="true"
+            focusable="false"
+          >
+            <path d="M21 13A9 9 0 1 1 11 3a7 7 0 0 0 10 10z" />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            aria-hidden="true"
+            focusable="false"
+          >
+            <circle cx="12" cy="12" r="5" />
+            <path
+              d="M12 1v2m0 18v2M4 4l2 2m12 12 2 2M1 12h2m18 0h2M4 20l2-2M18 6l2-2"
+            />
+          </svg>
+        </button>
+
+        <small>
+          <a target="_blank" href="https://github.com/toybreaker/fiko">
+            Github
+          </a>
+        </small>
+
+        <small>
+          <a target="_blank" href="https://www.npmjs.com/package/fiko">Npm</a>
+        </small>
+
+        <small id="pixelratio"></small>
       </article>
     </footer>
 
@@ -561,7 +550,7 @@
           media.removeEventListener("change", updatePixelRatio);
         };
 
-        output.textContent = `Device Pixel Ratio: ${window.devicePixelRatio}`;
+        output.innerHTML = `Your device Pixel Ratio: <strong>${window.devicePixelRatio}</strong>`;
       };
 
       updatePixelRatio();
