fine tuning accordium + | v0.6.3

--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.6.2</title>
+    <title>FIKO 0.6.3</title>
 
     <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
     <!-- <style>
@@ -71,7 +71,7 @@
 
           <!-- Accordion -->
           <details>
-            <summary>Closed Accordion Title</summary>
+            <summary>Accordion Title</summary>
             <p>
               This is the accordion content goes here. Opunanclose as women
               legs.
@@ -79,8 +79,11 @@
           </details>
 
           <details>
-            <summary>Other Closed Accordion</summary>
-            <p>Accordion content goes here.</p>
+            <summary>Accordion full of surprises...</summary>
+            <p>
+              When accordion is open, its &lt;summary&gt; becomes sticky and
+              gets a background color.
+            </p>
             <p>Opunanclose as women legs.</p>
             <p>Opunanclose as women legs.</p>
             <p>Opunanclose as women legs.</p>
@@ -91,9 +94,9 @@
           <details open>
             <summary>Open Accordion Title are Sticky.</summary>
             <p>
-              This accordion is open by default. Use &lt;details open&gt;. When
-              you tap is closes and and remove the glue! Note that little
-              chevron icon on the right rotating?! Tap on the title, and I shall
+              This accordion &lt;details open&gt; is open by default. When you
+              tap is closes and and remove the glue! Note that little chevron
+              icon on the right rotating?! Tap on the title, and I shall
               disappear...
             </p>
           </details>
@@ -302,8 +305,9 @@
           <hgroup>
             <h2>Modal</h2>
           </hgroup>
-          <p>This is modal</p>
-          <modal>Hey, this is an HTML modal!</modal>
+          <p>The following element is modal:</p>
+          <modal>Yo, I'm an HTML modal!</modal>
+          <button class="close">x</button>
         </section>
 
         <hr />
@@ -441,6 +445,8 @@
           <p>Paragraph after the horizontal line.</p>
         </section>
       </div>
+
+      <article>full width</article>
     </main>
 
     <!-- Footer -->
@@ -499,7 +505,7 @@
           <a target="_blank" href="https://www.npmjs.com/package/fiko">Npm</a>
         </small>
 
-        <small id="pixelratio"></small>
+        <small><a id="pixelratio"></a></small>
       </article>
     </footer>
 
