--- a/package/index.html
+++ b/package/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.6.10</title>
+    <title>FIKO 0.7.0</title>
 
-    <link rel="icon" type="image/svg+xml" href="/favico_dark.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/favico_dark.svg"
+    />
     <!-- <style>
       @layer root {
         :root {
@@ -32,14 +39,19 @@
         </ul>
       </nav>
       <!-- JS Toggle Button for Dark/Light Mode -->
-      <div class="switcher" aria-label="Toggle light | dark mode">
+      <div
+        class="switcher"
+        aria-label="Toggle light | dark mode"
+      >
         <input
           type="checkbox"
           id="toggle-theme"
           class="toggle-container"
           onchange="toggleTheme()"
         />
-        <label for="toggle-theme"><i>Swith color mode</i></label>
+        <label for="toggle-theme">
+          <i>Swith color mode</i>
+        </label>
       </div>
     </header>
 
@@ -50,7 +62,8 @@
           <p>
             Without the
             <code>.container</code>
-            class, elements have no horizontal spacing, as the following image:
+            class, elements have no horizontal spacing, as
+            the following image:
           </p>
         </hgroup>
       </section>
@@ -106,7 +119,9 @@
           </details>
 
           <details>
-            <summary>Accordion full of surprises...</summary>
+            <summary>
+              Accordion full of surprises...
+            </summary>
             <p>
               Yes, when
               <code>details</code>
@@ -120,20 +135,23 @@
               till you scroll it out of the viewport.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque
-              aliquam vestibulum morbi blandit cursus.
+              Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.
+              Neque aliquam vestibulum morbi blandit cursus.
             </p>
 
             <p>
-              Dui sapien eget mi proin sed. Arcu non odio euismod lacinia.
-              Tincidunt id aliquet risus feugiat in ante metus dictum.
+              Dui sapien eget mi proin sed. Arcu non odio
+              euismod lacinia. Tincidunt id aliquet risus
+              feugiat in ante metus dictum.
             </p>
 
             <p>
-              Odio morbi quis commodo odio aenean sed adipiscing diam donec. Ut
-              tortor pretium viverra suspendisse potenti. Sollicitudin tempor id
-              eu nisl nunc mi.
+              Odio morbi quis commodo odio aenean sed
+              adipiscing diam donec. Ut tortor pretium
+              viverra suspendisse potenti. Sollicitudin
+              tempor id eu nisl nunc mi.
             </p>
           </details>
         </section>
@@ -144,11 +162,15 @@
           </hgroup>
 
           <p>
-            This is a paragraph, which is max 60 digits wide, to help
-            readability. It ends with a rent full of lorem ipsum dolor sit, amet
-            consectetur adipisicing elit, right?!
+            This is a paragraph, which is max 60 digits
+            wide, to help readability. It ends with a rent
+            full of lorem ipsum dolor sit, amet consectetur
+            adipisicing elit, right?!
           </p>
-          <p>New paragraph. Amet consectetur adipisicing elit.</p>
+          <p>
+            New paragraph. Amet consectetur adipisicing
+            elit.
+          </p>
         </section>
 
         <hr />
@@ -159,7 +181,8 @@
             <p>
               The
               <code>class='grid'</code>
-              gives a minimal grid system with auto-layout columns. The
+              gives a minimal grid system with auto-layout
+              columns. The
               <code>class='border'</code>
               is added here to show grid elements:
             </p>
@@ -168,7 +191,7 @@
 
           <div class="grid">
             <article class="border">
-              <header>Article Card Header</header>
+              <header>Article Header</header>
               <img
                 src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
                 alt="rokma.com"
@@ -242,8 +265,13 @@
         <section>
           <hgroup>
             <h2>Figure</h2>
-            <p>Use it when in need for Horizontal Scroll.</p>
-            <p>It can contain anything, here it wraps a table:</p>
+            <p>
+              Use it when in need for Horizontal Scroll.
+            </p>
+            <p>
+              It can contain anything, here it wraps a
+              table:
+            </p>
           </hgroup>
           <br />
 
@@ -364,10 +392,12 @@
           </blockquote>
 
           <blockquote>
-            "For 50 years, WWF has been protecting the future of nature. The
-            world's leading conservation organization, WWF works in 100
-            countries and is supported by 1.2 million members in the United
-            States and close to 5 million globally."
+            "For 50 years, WWF has been protecting the
+            future of nature. The world's leading
+            conservation organization, WWF works in 100
+            countries and is supported by 1.2 million
+            members in the United States and close to 5
+            million globally."
             <footer>
               <cite>— worldwildlife.org</cite>
             </footer>
@@ -381,8 +411,9 @@
         <hgroup>
           <h2>Article</h2>
           <p>
-            Renders as a card, defaults to no border. Use it to center children
-            horizontally. Here it wraps an image.
+            Renders as a card, defaults to no border. Use it
+            to center children horizontally. Here it wraps
+            an image.
           </p>
         </hgroup>
 
@@ -420,7 +451,10 @@
             src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
             alt="rokma.com"
           />
-          <p>Article content goes here. Lorem ipsum dolor sit amet.</p>
+          <p>
+            Article content goes here. Lorem ipsum dolor sit
+            amet.
+          </p>
           <a href="#" class="card-button">
             <button>Call to Action</button>
           </a>
@@ -429,8 +463,9 @@
         <article class="border">
           <h2>Text article</h2>
           <p>
-            Article content goes here. Ipsum dolor sit amet. Lorem dolor sit
-            amet. Lorem ipsum sit amet. Lorem ipsum dolor amet.
+            Article content goes here. Ipsum dolor sit amet.
+            Lorem dolor sit amet. Lorem ipsum sit amet.
+            Lorem ipsum dolor amet.
           </p>
           <a href="#" class="card-button">
             <button>Call to Action</button>
@@ -526,7 +561,9 @@
             aria-hidden="true"
             focusable="false"
           >
-            <path d="M21 13A9 9 0 1 1 11 3a7 7 0 0 0 10 10z" />
+            <path
+              d="M21 13A9 9 0 1 1 11 3a7 7 0 0 0 10 10z"
+            />
           </svg>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -549,13 +586,21 @@
         </button>
 
         <small>
-          <a target="_blank" href="https://github.com/toybreaker/fiko">
+          <a
+            target="_blank"
+            href="https://github.com/toybreaker/fiko"
+          >
             Github
           </a>
         </small>
 
         <small>
-          <a target="_blank" href="https://www.npmjs.com/package/fiko">Npm</a>
+          <a
+            target="_blank"
+            href="https://www.npmjs.com/package/fiko"
+          >
+            Npm
+          </a>
         </small>
 
         <small><a id="pixelratio"></a></small>
@@ -565,11 +610,12 @@
     <script>
       // THEME SWITCH Toggle & User Preference Detection
       function toggleTheme() {
-        const currentTheme = document.body.getAttribute("data-theme");
-        if (currentTheme === "dark") {
-          document.body.setAttribute("data-theme", "light");
+        const currentTheme =
+          document.body.getAttribute('data-theme');
+        if (currentTheme === 'dark') {
+          document.body.setAttribute('data-theme', 'light');
         } else {
-          document.body.setAttribute("data-theme", "dark");
+          document.body.setAttribute('data-theme', 'dark');
         }
       }
 
@@ -577,11 +623,12 @@
       function setUserPreference() {
         const userPrefersDark =
           window.matchMedia &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches;
+          window.matchMedia('(prefers-color-scheme: dark)')
+            .matches;
         if (userPrefersDark) {
-          document.body.setAttribute("data-theme", "dark");
+          document.body.setAttribute('data-theme', 'dark');
         } else {
-          document.body.setAttribute("data-theme", "light");
+          document.body.setAttribute('data-theme', 'light');
         }
       }
 
@@ -589,14 +636,14 @@
 
       // Update on preference change (like when using DevTools to change it)
       window
-        .matchMedia("(prefers-color-scheme: dark)")
+        .matchMedia('(prefers-color-scheme: dark)')
         .addListener(setUserPreference);
     </script>
 
     <script>
       // devicePixelRatio query script
       let remove = null;
-      const output = document.querySelector("#pixelratio");
+      const output = document.querySelector('#pixelratio');
 
       const updatePixelRatio = () => {
         if (remove != null) {
@@ -604,9 +651,12 @@
         }
         const mqString = `(resolution: ${window.devicePixelRatio}dppx)`;
         const media = matchMedia(mqString);
-        media.addEventListener("change", updatePixelRatio);
+        media.addEventListener('change', updatePixelRatio);
         remove = () => {
-          media.removeEventListener("change", updatePixelRatio);
+          media.removeEventListener(
+            'change',
+            updatePixelRatio,
+          );
         };
 
         output.innerHTML = `Your device Pixel Ratio: <strong>${window.devicePixelRatio}</strong>`;
