cleanup  + accordion fixes | v0.7.3

--- a/package/index.html
+++ b/package/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO 0.7.2</title>
+    <title>FIKO 0.7.3</title>
 
     <link
       rel="icon"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="invert">
+    <header class="invert alfa_BG">
       <nav class="toggle-wrapper">
         <h1>FIIIIIIKO&nbsp;</h1>
 
@@ -86,35 +86,6 @@
             <p>Accordion content goes here.</p>
           </details>
 
-          <details open>
-            <summary>Open Accordion</summary>
-
-            <p>
-              Need the accordion open at page load?
-              <code>details open</code>
-              does just that!
-            </p>
-
-            <p>
-              Note: When the accordion is open
-              <code>summary</code>
-              is
-              <em>Sticky.</em>
-            </p>
-            <p>
-              When you tap it, it closes... and 🐸
-              <em>Slime</em>
-              🐸 is removed!
-            </p>
-            <p>
-              <small>Note that</small>
-              <strong>v</strong>
-              <small>icon on the right, rotating?!</small>
-
-              <small>Tap it and I shall disappear...</small>
-            </p>
-          </details>
-
           <details>
             <summary>
               Accordion full of surprises...
@@ -151,7 +122,42 @@
               tempor id eu nisl nunc mi.
             </p>
           </details>
+
+          <details open>
+            <summary>
+              <span class="status"></span>
+              Accordion
+            </summary>
+
+            <p>
+              Need the accordion open at page load?
+              <code>details open</code>
+              does just that!
+            </p>
+
+            <p>
+              Note: When the accordion is open
+              <code>summary</code>
+              is
+              <em>Sticky.</em>
+            </p>
+            <p>
+              When you tap it, it closes..
+              <br />
+              and 🐸
+              <em>Slime</em>
+              🐸 is removed!
+            </p>
+            <p>
+              <small>Note that</small>
+              <strong>v</strong>
+              <small>icon on the right, rotating?!</small>
+              <small>Tap it and I shall disappear...</small>
+            </p>
+          </details>
         </section>
+
+        <hr />
 
         <section>
           <hgroup>
